// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vaults.utils getVaultPerformance no rewards or harvests returns value sources from fallback methods 1`] = `
Array [
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_precompound",
    "apr": 56.764799999999994,
    "boostable": false,
    "maxApr": 56.764799999999994,
    "minApr": 56.764799999999994,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_compound",
    "apr": 72.20922323181647,
    "boostable": false,
    "maxApr": 72.20922323181647,
    "minApr": 72.20922323181647,
    "name": "Vault Compounding",
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "type": "boosted_bBADGER_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_lp_fee",
    "apr": 1.13,
    "boostable": false,
    "maxApr": 1.13,
    "minApr": 1.13,
    "name": "Test LP Fees",
    "type": "lp_fee",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests non compatible network vault performances returns value sources from fallback methods 1`] = `
Array [
  CachedValueSource {
    "address": "0x6B2d4c4bb50274c5D4986Ff678cC971c0260E967",
    "addressValueSourceType": "0x6B2d4c4bb50274c5D4986Ff678cC971c0260E967_precompound",
    "apr": 56.764799999999994,
    "boostable": false,
    "maxApr": 56.764799999999994,
    "minApr": 56.764799999999994,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  CachedValueSource {
    "address": "0x6B2d4c4bb50274c5D4986Ff678cC971c0260E967",
    "addressValueSourceType": "0x6B2d4c4bb50274c5D4986Ff678cC971c0260E967_compound",
    "apr": 72.20922323181647,
    "boostable": false,
    "maxApr": 72.20922323181647,
    "minApr": 72.20922323181647,
    "name": "Vault Compounding",
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "type": "boosted_bBADGER_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_lp_fee",
    "apr": 1.13,
    "boostable": false,
    "maxApr": 1.13,
    "minApr": 1.13,
    "name": "Test LP Fees",
    "type": "lp_fee",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests non standard vault performance returns value sources from fallback methods 1`] = `
Array [
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_precompound",
    "apr": 56.764799999999994,
    "boostable": false,
    "maxApr": 56.764799999999994,
    "minApr": 56.764799999999994,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_compound",
    "apr": 72.20922323181647,
    "boostable": false,
    "maxApr": 72.20922323181647,
    "minApr": 72.20922323181647,
    "name": "Vault Compounding",
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "type": "boosted_bBADGER_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_lp_fee",
    "apr": 1.13,
    "boostable": false,
    "maxApr": 1.13,
    "minApr": 1.13,
    "name": "Test LP Fees",
    "type": "lp_fee",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests standard vault performance returns value sources from standard methods 1`] = `
Array [
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_precompound",
    "apr": 1.9605714285714286,
    "boostable": false,
    "maxApr": 1.9605714285714286,
    "minApr": 1.9605714285714286,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_compound",
    "apr": 1.9784148266144275,
    "boostable": false,
    "maxApr": 1.9784148266144275,
    "minApr": 1.9784148266144275,
    "name": "Vault Compounding",
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_flat_bCVXCRV_emission",
    "apr": 0.000004975832417583712,
    "boostable": false,
    "maxApr": 0.000004975832417583712,
    "minApr": 0.000004975832417583712,
    "name": "bCVXCRV Rewards",
    "type": "flat_bCVXCRV_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_derivative_bcvxcrv compounding",
    "apr": 2.531915807359191e-7,
    "boostable": false,
    "maxApr": 2.531915807359191e-7,
    "minApr": 2.531915807359191e-7,
    "name": "bCVXCRV Compounding",
    "type": "derivative_bcvxcrv compounding",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_flat_bveCVX_emission",
    "apr": 0.000022426642857150473,
    "boostable": false,
    "maxApr": 0.000022426642857150473,
    "minApr": 0.000022426642857150473,
    "name": "bveCVX Rewards",
    "type": "flat_bveCVX_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_derivative_bvecvx compounding",
    "apr": 0.0000011411630552293548,
    "boostable": false,
    "maxApr": 0.0000011411630552293548,
    "minApr": 0.0000011411630552293548,
    "name": "bveCVX Compounding",
    "type": "derivative_bvecvx compounding",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "type": "boosted_bBADGER_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_lp_fee",
    "apr": 1.13,
    "boostable": false,
    "maxApr": 1.13,
    "minApr": 1.13,
    "name": "Test LP Fees",
    "type": "lp_fee",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests standard vault performance skips all emitted tokens with no price 1`] = `
Array [
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_precompound",
    "apr": 1.9605714285714286,
    "boostable": false,
    "maxApr": 1.9605714285714286,
    "minApr": 1.9605714285714286,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_compound",
    "apr": 1.9784148266144275,
    "boostable": false,
    "maxApr": 1.9784148266144275,
    "minApr": 1.9784148266144275,
    "name": "Vault Compounding",
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "type": "boosted_bBADGER_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_lp_fee",
    "apr": 1.13,
    "boostable": false,
    "maxApr": 1.13,
    "minApr": 1.13,
    "name": "Test LP Fees",
    "type": "lp_fee",
  },
]
`;
